fix: fix letter spacing

--- a/shelter/pages/main/styles.css
+++ b/shelter/pages/main/styles.css
@@ -29,6 +29,7 @@ h1 {
     padding-bottom: 10px;
     font-size: 32px;
     line-height: 110%;
+    letter-spacing: 0.06em;
 }
 
 h1 a {
@@ -69,6 +70,12 @@ h5 {
     src: url("../../assets/fonts/georgia/georgia-regular.ttf") format("ttf");
   }
 
+  @font-face {
+    font-family: "Arial";
+    src: url("../../assets/fonts/arial/arial-regular.ttf") format("ttf");
+  }
+
+
   a {
     text-decoration: none;
 }
@@ -103,8 +110,9 @@ header {
 #logo_phrase {
     font-family: Arial;
     font-size: 13px;
-    letter-spacing: 0.01em;
+    letter-spacing: 0.06em;
     color: var(--color-second);
+    padding-left: 4px;
 }
 
 nav ul {
@@ -123,6 +131,7 @@ nav li {
     font-size: 15px;
     line-height: 160%;
     color: var(--color-primary-dark);
+    letter-spacing: 0px;
 }
 
 nav li a {
